[package]
name = "xkbregistry"
version = "0.1.0"
edition = "2021"
description = "Bindings to xkbregistry from libxkbcommon."
authors = ["jonasc <github@bcdf.eu>"]
repository = "https://github.com/jonasc/xkbregistry.rs"
keywords = ["xkb", "xkbcommon", "xkbregistry"]
license = "WTFPL"
build = "build.rs"

[dependencies]
libc = "0.2.138"

[build-dependencies]
bindgen = "0.63.0"
pkg-config = "0.3.26"

[features]
static = []
